# python3-lib

./: .gitignore  CHANGELOG.md  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: changelog.txt  conf.py  index.txt  make-docset  ref-gstat.txt  ref-log.txt  ref-logmsgs.txt  ref-monitor.txt  ref-trace.txt  reference.txt  usage-guide.txt
docs/firebird-lib.docset/Contents/: Info.plist
docs/firebird-lib.docset/Contents/Resources/: docSet.dsidx
docs/firebird-lib.docset/Contents/Resources/Documents/: .buildinfo  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  ref-gstat.html  ref-log.html  ref-logmsgs.html  ref-monitor.html  ref-schema.html  ref-trace.html  reference.html  search.html  searchindex.js  usage-guide.html
docs/firebird-lib.docset/Contents/Resources/Documents/_modules/: index.html
docs/firebird-lib.docset/Contents/Resources/Documents/_modules/firebird/lib/: gstat.html  log.html  logmsgs.html  monitor.html  schema.html  trace.html
docs/firebird-lib.docset/Contents/Resources/Documents/_sources/: changelog.txt  index.txt  ref-gstat.txt  ref-schema.txt  ref-trace.txt  usage-guide.txt
firebird/lib/: gstat.py  log.py  logmsgs.py  monitor.py  schema.py  trace.py
src/firebird/lib/: __about__.py  gstat.py  log.py  logmsgs.py  monitor.py  schema.py  trace.py
test/: fbtest30.fdb  fbtest40.fdb  fbtest50.fdb  test_gstat.py  test_log.py  test_monitor.py  test_schema.py  test_trace.py
tests/: conftest.py  fbtest30.fbk  fbtest30.fdb  fbtest50.fdb  test_gstat.py  test_log.py  test_monitor.py  test_schema.py  test_trace.py
