[build-system]
requires = ["setuptools >= 65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firebird-lib"
version = "1.3.0"
description = "Firebird driver extension library"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Pavel Císař", email = "pcisar@users.sourceforge.net"}]
keywords = ["Firebird", "RDBMS", "driver", "extension", "library"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Software Development",
    "Topic :: Database",
    ]
dependencies = [
    "firebird-base>=1.5.0",
    "firebird-driver>=1.7.0",
    ]

[project.urls]
Home = "https://github.com/FirebirdSQL/python3-lib"
Documentation = "https://firebird-lib.rtfd.io"
"Bug Reports" = "https://github.com/FirebirdSQL/python3-lib/issues"
Funding = "https://www.firebirdsql.org/en/donate/"
Source = "https://github.com/FirebirdSQL/python3-lib"

[tool.setuptools]
zip-safe = true
